--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         text-align: right;
         padding-top: 11em;
-        background-color: pink;
+        background-color: red;
 
       }
       .textColumn p {
@@ -49,7 +49,7 @@
         bottom: 0px;
         left: 50%;
 
-        background-color: #33342D;
+        background-color: #f07008;
       }
 
       h1 {
